Imported upstream version '0.3.2' of 'upstream'

--- a/node_manager_fkie/src/node_manager_fkie/GUI.qrc
+++ b/node_manager_fkie/src/node_manager_fkie/GUI.qrc
@@ -17,6 +17,7 @@
     <file>icons/crystal_clear_launch_file_def_cfg.png</file>
     <file>icons/crystal_clear_package.png</file>
     <file>icons/crystal_clear_prop_run.png</file>
+    <file>icons/crystal_clear_prop_run_echo.png</file>
     <file>icons/crystal_clear_reload.png</file>
     <file>icons/crystal_clear_run_zeroconf.png</file>
     <file>icons/crystal_clear_show_delete_log.png</file>
