--- a/src/node_manager_fkie/GUI.qrc
+++ b/src/node_manager_fkie/GUI.qrc
@@ -13,8 +13,10 @@
     <file>icons/crystal_clear_get_parameter.png</file>
     <file>icons/crystal_clear_helpcenter.png</file>
     <file>icons/crystal_clear_launch_file.png</file>
+    <file>icons/crystal_clear_launch_file_new.png</file>
     <file>icons/crystal_clear_launch_file_recent.png</file>
     <file>icons/crystal_clear_launch_file_def_cfg.png</file>
+    <file>icons/crystal_clear_launch_file_transfer.png</file>
     <file>icons/crystal_clear_package.png</file>
     <file>icons/crystal_clear_prop_run.png</file>
     <file>icons/crystal_clear_prop_run_echo.png</file>
@@ -34,6 +36,7 @@
     <file>icons/deleket_deviantart_stop.png</file>
     <file>icons/imacadam_stop.png</file>
     <file>icons/remote.png</file>
+    <file>icons/save.png</file>
     <file>icons/state_off.png</file>
     <file>icons/state_part.png</file>
     <file>icons/state_run.png</file>
