Imported upstream version '0.3.6' of 'upstream'

--- a/node_manager_fkie/src/node_manager_fkie/GUI.qrc
+++ b/node_manager_fkie/src/node_manager_fkie/GUI.qrc
@@ -29,6 +29,7 @@
     <file>icons/crystal_clear_stack.png</file>
     <file>icons/crystal_clear_sync.png</file>
     <file>icons/crystal_clear_warning.png</file>
+    <file>icons/crystal_clear_xclock.png</file>
     <file>icons/default_cfg.png</file>
     <file>icons/default_cfg_edit.png</file>
     <file>icons/deleket_deviantart_play.png</file>
