--- a/node_manager_fkie/src/node_manager_fkie/GUI.qrc
+++ b/node_manager_fkie/src/node_manager_fkie/GUI.qrc
@@ -4,7 +4,7 @@
     <file>icons/crystal_clear_action_db_add.png</file>
     <file>icons/crystal_clear_action_db_remove.png</file>
     <file>icons/crystal_clear_action_db_update.png</file>
-    <file>icons/crystal_clear_miscellaneous.png</file>
+    <file>icons/crystal_clear_add.png</file>
     <file>icons/crystal_clear_button_close.png</file>
     <file>icons/crystal_clear_clicknrun.png</file>
     <file>icons/crystal_clear_dyncfg.png</file>
@@ -12,11 +12,14 @@
     <file>icons/crystal_clear_folder.png</file>
     <file>icons/crystal_clear_get_parameter.png</file>
     <file>icons/crystal_clear_helpcenter.png</file>
+    <file>icons/crystal_clear_info.png</file>
     <file>icons/crystal_clear_launch_file.png</file>
     <file>icons/crystal_clear_launch_file_new.png</file>
     <file>icons/crystal_clear_launch_file_recent.png</file>
     <file>icons/crystal_clear_launch_file_def_cfg.png</file>
     <file>icons/crystal_clear_launch_file_transfer.png</file>
+    <file>icons/crystal_clear_miscellaneous.png</file>
+    <file>icons/crystal_clear_not_sync.png</file>
     <file>icons/crystal_clear_package.png</file>
     <file>icons/crystal_clear_prop_run.png</file>
     <file>icons/crystal_clear_prop_run_echo.png</file>
@@ -28,6 +31,7 @@
     <file>icons/crystal_clear_show_log.png</file>
     <file>icons/crystal_clear_stack.png</file>
     <file>icons/crystal_clear_sync.png</file>
+    <file>icons/crystal_clear_user.png</file>
     <file>icons/crystal_clear_warning.png</file>
     <file>icons/crystal_clear_xclock.png</file>
     <file>icons/default_cfg.png</file>
@@ -36,8 +40,10 @@
     <file>icons/deleket_deviantart_refresh.png</file>
     <file>icons/deleket_deviantart_stop.png</file>
     <file>icons/imacadam_stop.png</file>
+    <file>icons/load.png</file>
     <file>icons/remote.png</file>
     <file>icons/save.png</file>
+    <file>icons/state_ghost.png</file>
     <file>icons/state_off.png</file>
     <file>icons/state_part.png</file>
     <file>icons/state_run.png</file>
