--- a/src/node_manager_fkie/MasterTab.ui
+++ b/src/node_manager_fkie/MasterTab.ui
@@ -37,21 +37,39 @@
        <height>32</height>
       </size>
      </property>
+     <property name="documentMode">
+      <bool>true</bool>
+     </property>
      <widget class="QWidget" name="tabNodes">
       <attribute name="title">
        <string>Nodes</string>
       </attribute>
       <layout class="QHBoxLayout" name="horizontalLayout_5">
-       <property name="margin">
-        <number>6</number>
+       <property name="spacing">
+        <number>1</number>
+       </property>
+       <property name="leftMargin">
+        <number>0</number>
+       </property>
+       <property name="topMargin">
+        <number>3</number>
+       </property>
+       <property name="rightMargin">
+        <number>1</number>
+       </property>
+       <property name="bottomMargin">
+        <number>1</number>
        </property>
        <item>
         <widget class="QFrame" name="frame">
          <property name="frameShape">
-          <enum>QFrame::StyledPanel</enum>
+          <enum>QFrame::NoFrame</enum>
          </property>
          <property name="frameShadow">
-          <enum>QFrame::Raised</enum>
+          <enum>QFrame::Plain</enum>
+         </property>
+         <property name="lineWidth">
+          <number>0</number>
          </property>
          <layout class="QVBoxLayout" name="verticalLayout_7">
           <property name="spacing">
@@ -137,6 +155,9 @@ p, li { white-space: pre-wrap; }
 &lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-size:11pt;&quot;&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
          </property>
          <layout class="QVBoxLayout" name="verticalLayout_4">
+          <property name="spacing">
+           <number>3</number>
+          </property>
           <property name="margin">
            <number>0</number>
           </property>
@@ -512,8 +533,17 @@ p, li { white-space: pre-wrap; }
        <string>Topics</string>
       </attribute>
       <layout class="QVBoxLayout" name="verticalLayout_2">
-       <property name="margin">
+       <property name="leftMargin">
+        <number>3</number>
+       </property>
+       <property name="topMargin">
         <number>4</number>
+       </property>
+       <property name="rightMargin">
+        <number>3</number>
+       </property>
+       <property name="bottomMargin">
+        <number>3</number>
        </property>
        <item>
         <widget class="QFrame" name="filter_frame_topic">
@@ -568,9 +598,12 @@ p, li { white-space: pre-wrap; }
              <enum>QFrame::NoFrame</enum>
             </property>
             <property name="frameShadow">
-             <enum>QFrame::Raised</enum>
+             <enum>QFrame::Plain</enum>
             </property>
             <layout class="QVBoxLayout" name="verticalLayout_5" stretch="0,0,0,0,0,0">
+             <property name="spacing">
+              <number>3</number>
+             </property>
              <property name="margin">
               <number>0</number>
              </property>
@@ -713,7 +746,16 @@ Publishers are all nodes which starts with '/rostopic_pub[topicname]'</string>
        <string>Services</string>
       </attribute>
       <layout class="QVBoxLayout" name="verticalLayout_3">
-       <property name="margin">
+       <property name="leftMargin">
+        <number>3</number>
+       </property>
+       <property name="topMargin">
+        <number>4</number>
+       </property>
+       <property name="rightMargin">
+        <number>3</number>
+       </property>
+       <property name="bottomMargin">
         <number>4</number>
        </property>
        <item>
@@ -772,6 +814,9 @@ Publishers are all nodes which starts with '/rostopic_pub[topicname]'</string>
              <enum>QFrame::Raised</enum>
             </property>
             <layout class="QVBoxLayout" name="verticalLayout_8">
+             <property name="spacing">
+              <number>3</number>
+             </property>
              <property name="margin">
               <number>0</number>
              </property>
@@ -821,7 +866,16 @@ Publishers are all nodes which starts with '/rostopic_pub[topicname]'</string>
        <string>Parameter</string>
       </attribute>
       <layout class="QVBoxLayout" name="verticalLayout">
-       <property name="margin">
+       <property name="leftMargin">
+        <number>3</number>
+       </property>
+       <property name="topMargin">
+        <number>4</number>
+       </property>
+       <property name="rightMargin">
+        <number>3</number>
+       </property>
+       <property name="bottomMargin">
         <number>4</number>
        </property>
        <item>
@@ -886,6 +940,9 @@ Publishers are all nodes which starts with '/rostopic_pub[topicname]'</string>
              <enum>QFrame::Raised</enum>
             </property>
             <layout class="QVBoxLayout" name="verticalLayout_9">
+             <property name="spacing">
+              <number>3</number>
+             </property>
              <property name="leftMargin">
               <number>3</number>
              </property>
@@ -952,6 +1009,35 @@ Publishers are all nodes which starts with '/rostopic_pub[topicname]'</string>
                <property name="icon">
                 <iconset resource="GUI.qrc">
                  <normaloff>:/icons/crystal_clear_action_db_remove.png</normaloff>:/icons/crystal_clear_action_db_remove.png</iconset>
+               </property>
+               <property name="iconSize">
+                <size>
+                 <width>32</width>
+                 <height>32</height>
+                </size>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QToolButton" name="saveParameterButton">
+               <property name="enabled">
+                <bool>false</bool>
+               </property>
+               <property name="sizePolicy">
+                <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+                 <horstretch>0</horstretch>
+                 <verstretch>0</verstretch>
+                </sizepolicy>
+               </property>
+               <property name="toolTip">
+                <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Saves selected parameter to a file using YAML format&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+               </property>
+               <property name="text">
+                <string>...</string>
+               </property>
+               <property name="icon">
+                <iconset resource="GUI.qrc">
+                 <normaloff>:/icons/save.png</normaloff>:/icons/save.png</iconset>
                </property>
                <property name="iconSize">
                 <size>
