--- a/src/node_manager_fkie/GUI.qrc
+++ b/src/node_manager_fkie/GUI.qrc
@@ -7,9 +7,11 @@
     <file>icons/crystal_clear_add.png</file>
     <file>icons/crystal_clear_button_close.png</file>
     <file>icons/crystal_clear_clicknrun.png</file>
+    <file>icons/crystal_clear_discovery.png</file>
     <file>icons/crystal_clear_dyncfg.png</file>
     <file>icons/crystal_clear_edit_launch.png</file>
     <file>icons/crystal_clear_folder.png</file>
+    <file>icons/crystal_clear_folder_open.png</file>
     <file>icons/crystal_clear_get_parameter.png</file>
     <file>icons/crystal_clear_helpcenter.png</file>
     <file>icons/crystal_clear_info.png</file>
