--- a/src/node_manager_fkie/GUI.qrc
+++ b/src/node_manager_fkie/GUI.qrc
@@ -20,6 +20,7 @@
     <file>icons/crystal_clear_launch_file_recent.png</file>
     <file>icons/crystal_clear_launch_file_def_cfg.png</file>
     <file>icons/crystal_clear_launch_file_transfer.png</file>
+    <file>icons/crystal_clear_launch_server.png</file>
     <file>icons/crystal_clear_miscellaneous.png</file>
     <file>icons/crystal_clear_not_sync.png</file>
     <file>icons/crystal_clear_package.png</file>
