--- a/src/node_manager_fkie/GUI.qrc
+++ b/src/node_manager_fkie/GUI.qrc
@@ -20,6 +20,7 @@
     <file>icons/crystal_clear_launch_file_recent.png</file>
     <file>icons/crystal_clear_launch_file_def_cfg.png</file>
     <file>icons/crystal_clear_launch_file_transfer.png</file>
+    <file>icons/crystal_clear_launch_server.png</file>
     <file>icons/crystal_clear_miscellaneous.png</file>
     <file>icons/crystal_clear_not_sync.png</file>
     <file>icons/crystal_clear_package.png</file>
@@ -57,8 +58,11 @@
     <file>icons/stock_disconnect.png</file>
   </qresource>
   <qresource prefix="forms">
+    <file>LaunchFilesDockWidget.ui</file>
+    <file>LogDockWidget.ui</file>
     <file>MainWindow.ui</file>
     <file>MasterTab.ui</file>
     <file>PasswordInput.ui</file>
+    <file>SettingsDockWidget.ui</file>
   </qresource>
 </RCC>
